GCW-858 fixed offer-status full-stop spacing

--- a/app/styles/templates/_review_offer.scss
+++ b/app/styles/templates/_review_offer.scss
@@ -9,7 +9,7 @@
   }
 
   .review_message div {
-    display: inline;
+    display: inline-block;
   }
 
   .start_review_link {
